tests/baselines/reference/parserExportAssignment9.errors.txt
parserExportAssignment9.ts(2,3): error TS1319: A default export can only be used in an ECMAScript-style module.
parserExportAssignment9.ts(6,3): error TS1319: A default export can only be used in an ECMAScript-style module.


==== parserExportAssignment9.ts (2 errors) ====
    namespace Foo {
      export default foo;
      ~~~~~~~~~~~~~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }
    
    module Bar {
      export default bar;
      ~~~~~~~~~~~~~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }